--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-02.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-02.html
@@ -1,39 +1,70 @@
-<h1>Задача. Анаграмма</h1>
+<h1>Анаграмма</h1>
 
 
 <article class="article">
-  <p>Конспект видео от 2023-08-26</p>
-  <h4>Не вздумай идти на собес в ЯНДЕКС пока не посмотришь ЭТО ВИДЕО</h4>
+  <p>Конспект из двух видео</p>
+  <p>Первое от 2023-08-26 <strong>Не вздумай идти на собес в ЯНДЕКС пока не посмотришь ЭТО ВИДЕО</strong></p>
+  <p>Второе <strong>Анаграммы, Простые числа и Матеша</strong></p>
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
 </article>
 
+
+<!-- Содержание -->
 <article class="article">
+  <h2>Содержание</h2>
+
+  <p><a href="#ya">Собес в Яндекс</a></p>
+  <p><a href="#task1">Задача 1. Анаграмма</a></p>
+  <p><a href="#task2">Задача 2. Сгруппировать анаграммы</a></p>
+  <p><a href="#task3">Задача 3. Количество простых чисел меньших N</a></p>
+  <p><a href="#task4">Задача 4. Перевернуть число</a></p>
+</article>
+
+
+<!-- Собес в Яндекс -->
+<article class="article">
+  <div class="anchor" id="ya"></div>
+  <h3>Собес в Яндекс</h3>
+
   <p>Разработчик C++ в Яндекс.Маркет от 250 до 450 тысяч рублей на руки на мидл позицию. А вот еще одна вакансия на 200 - 450 при этом синьер. Яндекс, конечно, удивляет.</p>
   <p>Посмотрев видос до конца, ты узнаешь как решать задачу которая встречается на алгоритмическом собеседовании в Яндекс. И еще более ценно, что ты разберешься в популярном паттерне решения задач. Которые встречаются не только в Яндексе, а еще в ВК, Озоне и Авито.</p>
+</article>
 
-  <h4>Задача</h4>
-  <p>Есть две строки. Нужно проверить является ли одна строка анаграммой другой строки.</p>
+
+<!-- Задача 1. Анаграмма -->
+<article class="article">
+  <div class="anchor" id="task1"></div>
+  <h3>Задача 1. Анаграмма</h3>
+
+  <h4>Leetcode 242. Valid Anagram</h4>
+
+  <p>Есть две строки s и t. Нужно проверить является ли одна строка анаграммой другой строки.</p>
   <p>Анаграмма - слово или фраза, образованная путем перестановки букв другого слова или фразы</p>
 
   <p>Ограничение: строка содержит только английские буквы в нижнем регистре и ее длина не может превышать 5000 символов</p>
 
   <p>Примеры</p>
-  <code>isAnagram('dog', 'god'); // true</code>
-  <code>isAnagram('dog', 'good'); // false</code>
+  <code>isAnagram('anagram', 'nagaram'); // true</code>
+  <code>isAnagram('rat', 'car'); // false</code>
 
   <p>Число различных букв в 2 строках должно совпадать, чтобы одна строка стала анаграммой другой строки</p>
 
+  <h4>Паттерн count cort</h4>
+  <p>Будем использовать паттерн <strong>сортировка подсчетом (count sort) с отступом</strong></p>
+  <p>Используйте сортировку подсчетом когда число уникальных сортируемых объектов гораздо меньше их числа</p>
+  <p>Для перевода буквы в число будем использовать ASCII таблицу</p>
+  <code>'a' = 97, ..., 'z' = 122</code>
+  <p>Поскольку наши элементы начинаются не с нуля, а с 97, то будем использовать паттерн <strong>сортировка подсчетом с отступом</strong>. Это обычный count sort, но теперь нулевой элемент это не количество элементов с кодом 0, а количество элементов с кодом 97 (буква a)</p>
+
   <details>
     <summary>Алгоритм</summary>
-    <p>Будем использовать паттерн <strong>сортировка подсчетом (count sort) с отступом</strong></p>
-    <p>Используйте сортировку подсчетом когда число уникальных сортируемых объектов гораздо меньше их числа</p>
-    <p>Для перевода буквы в число будем использовать ASCII таблицу</p>
-    <code>'a' = 97, ..., 'z' = 122</code>
-    <p>Поскольку наши элементы начинаются не с нуля, а с 97, то будем использовать паттерн <strong>сортировка подсчетом с отступом</strong>. Это обычный count sort, но теперь нулевой элемент это не количество элементов с кодом 0, а количество элементов с кодом 97 (буква a)</p>
     <ol>
-      <li>Проверим длину каждого массива. Если они разные то вернем false и выйдем из функции</li>
+      <li>
+        <p>Сравним длины строк s и t. Если они разные то вернем false и выйдем из функции</p>
+        <code>if (s.length !== t.length) {return false;}</code>
+      </li>
       <li>Создадим два массива count1 и count2 из 26 элементов и заполним их нулями. Для подсчета букв первой и второй строки.
         <code>let count1 = Array(26).fill(0);</code>
         <code>let count2 = Array(26).fill(0);</code>
@@ -117,9 +148,9 @@ class Solution:
     count = [0 for _ in range(26)]
 
     for char in s:
-      count[ord(char) - 97]++
+      count[ord(char) - ord('a')] += 1
     for char in t:
-      count[ord(char) - 97]--
+      count[ord(char) - ord('a')] -= 1
 
     return count == [0 for _ in range(26)]
 </pre>
@@ -154,7 +185,7 @@ func isAnagram(s string, t string) bool {
 class Solution {
 public:
   bool isAnagram(string s, string t) {
-    vextor&lt;int&gt; count (26,0);
+    vector&lt;int&gt; count (26,0);
 
     for (char c: s) {
       count[c - 'a']++;
@@ -201,3 +232,165 @@ class Solution {
 </pre>
   </details>
 </article>
+
+
+<!-- Задача 2. Сгруппировать анаграммы -->
+<article class="article">
+  <div class="anchor" id="task2"></div>
+  <h3>Задача 2. Сгруппировать анаграммы</h3>
+
+  <h4>Leetcode 49. Group Anagrams</h4>
+
+  <p>Дан массив строк str. Надо сгрупировать анаграммы вместе. Вернуть ответ можно в любом порядке.</p>
+
+  <p>Ограничение. Каждая строка состоит только из маленьких английских букв</p>
+
+  <h4>Пример 1</h4>
+  <code>strs = ["eat", "tea", "tan", "ate", "nat", "bat"]</code>
+  <code>Output: [["bat"], ["nat", "tan"], ["ate", "eat", "tea"]]</code>
+
+  <h4>Пример 2</h4>
+  <code>strs = [""]</code>
+  <code>Output: [[""]]</code>
+
+  <h4>Пример 3</h4>
+  <code>strs = ["a"]</code>
+  <code>Output: [["a"]]</code>
+
+  <h4>Паттерн count sort</h4>
+
+  <p>Заведем словарь. Ключами в этом словаре будут отсортированные слова из массива strs, а его значением у каждого ключа будет массив. Это может быть или массив индексов входного массива strs, или массив несортированных слов из входного массива strsСначала методом count sort сортируем каждое слово.</p>
+  <p>Проходим по входному массиву strs и сортируем каждое слово методом count sort и заполняем словарь. Если ключа с такой остортированной строкой нет, то добавляем ключ. Если есть, то добавляем исходную строку в массив значения для этого ключа.</p>
+  <p>Это задача из Яндекса и там принимают решение с отсортированными строками</p>
+
+  <p>Как оптимизация, можно хранить не отсортированные строки, а массив. Это массив на 26 элементов, где индексы от 0 до 25 соответствуют маленьким буквам английского алфавита, а значение это сколько таких букв в строке</p>
+  <p>Сложность по времени O(N)</p>
+  <p>Сложность по памяти O(N)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
+    anagramGroups = collections.defaultdict(list)
+    for s in strs:
+      count = [0] * 26
+      for c in s:
+        count[ord(c) - ord('a')] += 1
+      anagramGroups[tuple(count)].append(s)
+
+    return anagramGroups.values()
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 3. Количество простых чисел меньших N -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача 3. Количество простых чисел меньших N</h3>
+
+  <h4>Leetcode 204. Count Primes</h4>
+
+  <p>Дано целое число n. Вернуть количество простых чисел, которые строго меньше чем n.</p>
+
+  <p>Простое число это число больше 0, которое имеет только два делителя - 1 и само себя</p>
+
+  <h4>Пример 1</h4>
+  <code>n = 10</code>
+  <code>Output: 4 // 2,3,5,7</code>
+
+  <h4>Пример 2</h4>
+  <code>n = 0</code>
+  <code>Output: 0</code>
+
+  <h4>Пример 3</h4>
+  <code>n = 1</code>
+  <code>Output: 0</code>
+
+  <h4>Как проверить что число простое</h4>
+  <p>Нужно искать его делители от 2 до n/2. Так как число n не может делиться на число большее чем n/2. Если у числа есть делители, то все они образуют пары. И единственное число , которое может быть без пары это корень из n. Тогда получается что мы можем искать делители от 2 до корня из n. Сложность такого решения для целого числа n это корень из n. Если нужно искать все простые числа в диапазоне от 1 до n, то сложность становится экспоненциальная - корень из n в степени n.</p>
+
+  <h4>Решето Эратосфена</h4>
+  <p>Заведем массив из n+1 элементов, для поиска простых чисел от 1 до n. Индекс массива совпадает с числом. Сначала все индексы заполняем значениями true, это означает что число простое. Мы знаем, что 0 и 1 это не простые числа. Поэтому в 0 и 1 записываем false. Дальше проходим в цикле от 2 до n.</p>
+  <ol>
+    <li>2 это простое число, но каждое второе число после числа 2 это уже не простое. Все числа начиная с 2*2 кратные 2 помечаем как false</li>
+    <li>3 это простое число, но каждое третье число после числа 3 это уже не простое. Все числа начиная с 3*3 кратные 3 помечаем как false</li>
+    <li>4 уже помечено как false. Пропускаем его</li>
+    <li>5 это простое число, но каждое пятое число после числа 5 это уже не простое. Все числа начиная с 5*5 кратные 5 помечаем как false</li>
+  </ol>
+  <p>Так происходит просеивание чисел через решето Эратосфена. </p>
+  <p>Сложность по времени O(Nlog(logN))</p>
+  <p>Сложность по памяти O(N)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def countPrimes(self, n: int) -> int:
+    primes = [True] * max(2, n);
+    primes[0] = primes[1] = False
+    for i in range(2, n):
+      if not primes[i]:
+        continue
+      for j in range(i * i, n, i):
+        primes[j] = False
+
+    return sum(primes)
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 4. Перевернуть число -->
+<article class="article">
+  <div class="anchor" id="task4"></div>
+  <h3>Задача 4. Перевернуть число</h3>
+
+  <h4>Leetcode 7. Reverse Integer</h4>
+
+  <p>Дано 32-битное целое число x со знаком. Вернуть это число с цифрами в перевернутом порядке, не меняя знака. Если перевернутое значение выйдет за диапазон 32-битных чисел [-2<sup>31</sup>, 2<sup>31</sup> - 1] тогда вернуть 0</p>
+
+  <p>Примечание. Вы не можете хранить 64-битные числа (со знаком или без)</p>
+
+  <h4>Пример 1</h4>
+  <code>x = 123</code>
+  <code>Output: 321</code>
+
+  <h4>Пример 2</h4>
+  <code>x = -123</code>
+  <code>Output: -321</code>
+
+  <h4>Пример 3</h4>
+  <code>x = 120</code>
+  <code>Output: 21</code>
+
+  <h4>Решение</h4>
+  <p>Берем модуль числа x. Заводим переменную res = 0 для ответа. Выполняем цикл пока число x не равно нулю. В цикле умножаем число res на 10. Делим число x на 10. Записываем в x целую часть от деления. Остаток от деления прибавляем к res</p>
+
+  <h4>Проблема</h4>
+  <p>Проблема у этой задачи на больших числах. Максимальное 32-битное число</p>
+  <code>2147483648</code>
+  <p>Если его развернуть, то оно не влезет в диапазон 32-битных чисел</p>
+  <code>8463847412</code>
+  <p>На самом деле на последнем шаге может случиться переполнение и результат может превысить максимальное число. Делаем проверку, если результат больше максимального, то возвращаем 0</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def reverse(self, x: int) -> int:
+    if x &lt; 0:
+      return -self.reverse(-x)
+    res = 0
+    while x != 0:
+      res = res * 10 + x % 10
+      if res > INT_MAX:
+        return 0
+      x = x // 10
+
+    return res
+</pre>
+  </details>
+</article>
+
