--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-03.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-03.html
@@ -2,24 +2,42 @@
 
 
 <article class="article">
-  <p>Конспект видео от 2023-10-06</p>
-  <h4>Зачем HUAWEI и INTEL дает это на собесе!</h4>
+  <p>Конспект из двух видео</p>
+  <p>Первое от 2023-10-06 <strong>Зачем HUAWEI и INTEL дает это на собесе!</strong></p>
+  <p>Второе <strong>Анаграммы, Простые числа и Матеша</strong></p>
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
 </article>
 
 
+<!-- Содержание -->
 <article class="article">
+  <h2>Содержание</h2>
+
+  <p><a href="#huawei">Собес в Huawei</a></p>
+  <p><a href="#task1">Задача 1. Поменять 2 числа местами</a></p>
+  <p><a href="#task2">Задача 2. Число, которое встречается в массиве 1 раз, остальные ровно 2 раза</a></p>
+  <p><a href="#task3">Задача 3. Число, которое встречается в массиве 1 раз, остальные ровно 3 раза</a></p>
+  <p><a href="#task4">Задача 4. Два числа, которые встречаются в массиве 1 раз</a></p>
+</article>
+
+
+<!-- Собес в Huawei -->
+<article class="article">
+  <div class="anchor" id="huawei"></div>
+  <h3>Собес в Huawei</h3>
+
   <p>Huawei и Intel на своих алгоритмических собесах просто обожают давать эту задачу. А меня она бесит просто нереально. Потому что если ты не видел ее раньше то все - досвидания. Разберем эту задачу, чтобы не пришлось краснеть если тебе ее дадут. А также две более усложненные версии к этой задаче.</p>
 </article>
 
 
-<!-- Поменять 2 числа местами -->
+<!-- Задача 1. Поменять 2 числа местами -->
 <article class="article">
+  <div class="anchor" id="task1"></div>
   <p>Перед тем как приступать к первой задаче, посмотрим как можно поменять два числа местами</p>
 
-  <h3>Поменять 2 числа местами</h3>
+  <h3>Задача 1. Поменять 2 числа местами</h3>
 
   <p>Пусть в x и y записаны два числа. Нужно поменять их местами не используя третью переменную</p>
   <p>Есть два способа сделать это</p>
@@ -45,8 +63,12 @@ x = x ^ y;
 </article>
 
 
+<!-- Задача 2. Число, которое встречается в массиве 1 раз, остальные ровно 2 раза -->
 <article class="article">
-  <h3>Задача 1. Число, которое встречается в массиве 1 раз, остальные ровно 2 раза</h3>
+  <div class="anchor" id="task2"></div>
+  <h3>Задача 2. Число, которое встречается в массиве 1 раз, остальные ровно 2 раза</h3>
+
+  <h4>Leetcode 136. Single Number (easy)</h4>
 
   <p>Приходит массив целых чисел. Каждое число встречается 2 раза, кроме одного. Найти это число, которое встречается в массиве один раз.</p>
   <p>Нужно решить за константную память O(1). Независимо от длины массива должно выделяться одинаковое количество дополнительной памяти. Использовать хеш таблицу не получится, потому что она требует O(N) памяти</p>
@@ -55,6 +77,11 @@ x = x ^ y;
   <code>uniq([2, 2, 1]); // 1</code>
   <code>uniq([4, 1, 2, 1, 2]); // 4</code>
   <code>uniq([2]); // 2</code>
+
+  <p>Есть два варианта решения</p>
+
+  <h4>Первое решение через XOR</h4>
+  <p>Оно подходит конкретно для этой задачи. Смысл операции XOR в том что два одинаковых числа в результате дадут 0. Поэтому выполнив XOR на всех элементах, у нас исчезнут все парные элементы и останется один элемент, у которого нет пары.</p>
 
   <details>
     <summary>Алгоритм через XOR</summary>
@@ -102,12 +129,9 @@ class Solution:
     return res
 </pre>
   </details>
-</article>
 
-<article class="article">
-  <h3>Задача 1. Число, которое встречается в массиве 1 раз, остальные ровно 2 раза</h3>
-
-  <p>Универсальное решение через подсчет бит</p>
+  <h4>Второе решение через подсчет бит</h4>
+  <p>Это универсальное решение подходит как для этой так и для следующих задач</p>
 
   <details>
     <summary>Алгоритм решения через подсчет бит</summary>
@@ -124,8 +148,9 @@ class Solution:
     </ol>
     <p>Сложность по времени O(N).</p>
     <p>Сложность по памяти O(1) потому что размер bitsCount равен разрядности чисел во входном массиве и не зависит от числа элементов в массиве.</p>
-    <p>У этого решения есть свое ограничение, которое важно понимать. Если в условии одно число встречается N раз, а остальные M раз, и требуется найти то , которое встречалось N раз. То обязательно N не должно делиться на M. То есть N % M != 0. Если N делится на M то это решение не подойдет.</p>
   </details>
+
+  <p>У этого решения есть свое ограничение, которое важно понимать. Если в условии одно число встречается N раз, а остальные M раз, и требуется найти то , которое встречалось N раз. То обязательно N не должно делиться на M. То есть N % M != 0. Если N делится на M то это решение не подойдет.</p>
 
   <details>
     <summary>Решение через подсчет бит (javascript)</summary>
@@ -144,6 +169,7 @@ class Solution:
   }
   let result = 0;
   for (let i = bitsCount.length - 1; i >= 0; i--) {
+    // зависит от кол-ва повторяющихся чисел
     result = result * 2 + bitsCount[i] % 2;
   }
 
@@ -171,6 +197,7 @@ class Solution:
 
     result = 0
     for i in reversed(range(len(bitsCount)))
+      # зависит от кол-ва повторяющихся чисел
       result = result * 2 + bitsCount[i] % 2
 
     return result - 2 ** 31
@@ -178,15 +205,31 @@ class Solution:
   </details>
 </article>
 
-<article class="article">
-  <h3>Задача 2. Число, которое встречается в массиве 1 раз, остальные ровно 3 раза</h3>
 
-  <p>Решение через подсчет бит является универсальным</p>
-  <p>Изменим условие задачи. Найти число, которое встречается 1 раз, а все остальные числа встречаются ровно 3 раза.</p>
-  <p>В универсальном решении нужно будет изменить только одну строчку. Вместо bitsCount[i] % 2 будет bitsCount[i] % 3</p>
+<!-- Задача 3. Число, которое встречается в массиве 1 раз, остальные ровно 3 раза -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача 3. Число, которое встречается в массиве 1 раз, остальные ровно 3 раза</h3>
+
+  <h4>Leetcode 137. Single Number II (medium)</h4>
+
+  <p>Решение через подсчет бит является универсальным. Изменим условие задачи.</p>
+  <p>Дан массив целых чисел nums, где каждое число повторяется 3 раза, кроме одного, которое появляется только однажды. Найти это число, которое встречается 1 раз.</p>
+
+  <h4>Пример 1</h4>
+  <code>nums = [2,2,3,2]</code>
+  <code>Output: 3</code>
+
+  <h4>Пример 2</h4>
+  <code>nums = [0,1,0,1,0,1,99]</code>
+  <code>Output: 99</code>
+
+  <h4>Решение через подсчет бит</h4>
+  <p>В универсальном решении нужно будет изменить только одну строчку. В полученном массиве с суммой бит будем находить остаток от деления на 3, чтобы исключить все числа, которые встречались в исходном массиве 3 раза. Вместо bitsCount[i] % 2 будет bitsCount[i] % 3</p>
+  <p>Это решение имеет ограничение. Если одно число встречалось N раз, а все остальные M раз, при этом N % M не должно быть равно нулю.</p>
 
   <details>
-    <summary>Решение через подсчет бит</summary>
+    <summary>Код на javascript</summary>
     <p>Вместо того чтобы использовать %2 мы теперь будем использовать %3</p>
 <pre>function uniq(arr) {
   let bitsCount = Array(32).fill(0);
@@ -203,17 +246,44 @@ class Solution:
   }
   let result = 0;
   for (let i = bitsCount.length - 1; i >= 0; i--) {
+    // зависит от кол-ва повторяющихся чисел
     result = result * 2 + bitsCount[i] % 3;
   }
   return result - 2 ** 31;
 }</pre>
   </details>
-  <p>Это решение имеет ограничение. Если одно число встречалось N раз, а все остальные M раз, при этом N % M не должно быть равно нулю.</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+  def uniq(self, nums: List[int]) -> int:
+    bitsCount = [0 for _ in range(64)]
+    for num in nums:
+      // делаем + 2 ** 31 чтобы работать с положительными числами
+      // и не переводить отрицательные в 2-ю систему счисления
+      num = num + 2 ** 31
+      i = 0
+      while num != 0:
+        bitsCount[i] += num % 2
+        num //= 2
+        i++
+
+    result = 0
+    for i in reversed(range(len(bitsCount)))
+      # зависит от кол-ва повторяющихся чмсел
+      result = result * 2 + bitsCount[i] % 3
+
+    return result - 2 ** 31
+</pre>
+  </details>
 </article>
 
 
+<!-- Задача 4. Два числа, которые встречаются в массиве 1 раз -->
 <article class="article">
-  <h3>Задача 3. Два числа, которые встречаются в массиве 1 раз</h3>
+  <div class="anchor" id="task4"></div>
+  <h3>Задача 4. Два числа, которые встречаются в массиве 1 раз</h3>
 
   <p>Нужно найти два числа A и B, которые встречаются в массиве только один раз, все остальные числа встречаются ровно два раза.</p>
 
