--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-05.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-05.html
@@ -1,4 +1,4 @@
-<h1>Матрица. Суша и вода</h1>
+<h1>Число островов</h1>
 
 
 <article class="article">
@@ -14,7 +14,7 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#task">Задача. Острова на матрице из суши и воды</a></p>
+  <p><a href="#task">Задача. Число островов</a></p>
   <p><a href="#dfs">Решение с помощью DFS</a></p>
   <p><a href="#bfs">Решение с помощью BFS</a></p>
   <p><a href="#idfs">Решение с помощью итеративного DFS</a></p>
@@ -26,17 +26,50 @@
 </article>
 
 
-<!-- Задача. Острова на матрице из суши и воды -->
+<!-- Задача. Число островов -->
 <article class="article">
   <div class="anchor" id="task"></div>
-  <h3>Задача. Острова на матрице из суши и воды</h3>
+  <h3>Задача. Число островов</h3>
 
-  <p>Дана матрица из единиц и нулей. Где 1 это суша, а 0 это вода. Выглядит как карта. Сколько на такой карте островов?</p>
+  <h4>Leetcode 200. Number of Islands (medium)</h4>
+
+  <p>Дана двумерная матрица grid размером m на n, состоящая только из единиц и нулей. Матрица представляет собой карту, где 1 это суша, а 0 это вода. Выглядит как карта. Вернуть число островов</p>
   <p>Участки суши могут образовывать острова. Участки суши образовывают остров если распологаются на соседних клетках по вертикали или горизонтали. Соседние по диагонали клетки не считаются островом</p>
 
-  <h4>Пример</h4>
+  <h4>Пример 1</h4>
 <pre>
-[
+grid = [
+  [1, 1, 1, 1, 0],
+  [1, 1, 0, 1, 0],
+  [1, 1, 0, 0, 0],
+  [0, 0, 0, 0, 0],
+]
+</pre>
+  <code>Output: 1</code>
+
+  <p>Пример 2</p>
+<pre>
+grid = [
+  [1, 1, 0, 0, 0],
+  [1, 1, 0, 0, 0],
+  [0, 0, 1, 0, 0],
+  [0, 0, 0, 1, 1],
+]
+</pre>
+  <code>Output: 3</code>
+
+  <p>Пример 3</p>
+<pre>
+grid = [
+  [1, 1],
+  [1, 1]
+]
+</pre>
+  <code>Output: 1</code>
+
+  <h4>Пример 4</h4>
+<pre>
+grid = [
   [0, 0, 1, 0, 0],
   [0, 1, 1, 0, 0],
   [0, 1, 1, 0, 0],
@@ -44,27 +77,7 @@
   [1, 0, 0, 0, 0]
 ]
 </pre>
-  <code>Ответ три острова</code>
-
-  <p>Пример</p>
-<pre>
-[
-  [1, 1, 0, 0, 0],
-  [1, 1, 0, 0, 0],
-  [0, 0, 1, 0, 0],
-  [0, 0, 0, 1, 1],
-]
-</pre>
-  <code>Ответ три острова</code>
-
-  <p>Пример</p>
-<pre>
-[
-  [1, 1],
-  [1, 1]
-]
-</pre>
-  <code>Ответ один остров</code>
+  <code>Output: 3</code>
 
   <p>Это задача на <strong>поиск в ширину - BFS</strong> и <strong>поиск в глубину - DFS</strong>. Это способы обойти граф. При BFS мы обходим граф равномерно во все стороны. При DFS мы идем по одному пути пока он не закончится, после этого выбираем другое направление.</p>
   <p>Нужно пройтись по всем клеткам суши и помечать их как пройденные (окрашивать). Неважно в ширину или в глубину мы будем идти, важно чтобы в конце все клетки были окрашены.</p>
