--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -92,6 +92,7 @@ code {
   display: block;
   margin: .5em;
   padding: .5em;
+  color: #005588;
   background-color: #f5f2f0;
   overflow-x: auto;
   border: 1px solid rgba(0, 0, 0, 0.125);
